// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VirtualizedList forwards correct stickyHeaderIndices when all in initial render window 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "key": 0,
        "sticky": true,
      },
      Object {
        "key": 1,
      },
      Object {
        "key": 2,
      },
      Object {
        "key": 3,
        "sticky": true,
      },
      Object {
        "key": 4,
      },
      Object {
        "key": 5,
      },
      Object {
        "key": 6,
        "sticky": true,
      },
      Object {
        "key": 7,
      },
      Object {
        "key": 8,
      },
      Object {
        "key": 9,
        "sticky": true,
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  getItemLayout={[Function]}
  initialNumToRender={10}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={
    Array [
      0,
      3,
      6,
      9,
    ]
  }
>
  <View>
    <View
      style={null}
    >
      <item
        sticky={true}
        value={0}
      />
    </View>
    <View
      style={null}
    >
      <item
        value={1}
      />
    </View>
    <View
      style={null}
    >
      <item
        value={2}
      />
    </View>
    <View
      style={null}
    >
      <item
        sticky={true}
        value={3}
      />
    </View>
    <View
      style={null}
    >
      <item
        value={4}
      />
    </View>
    <View
      style={null}
    >
      <item
        value={5}
      />
    </View>
    <View
      style={null}
    >
      <item
        sticky={true}
        value={6}
      />
    </View>
    <View
      style={null}
    >
      <item
        value={7}
      />
    </View>
    <View
      style={null}
    >
      <item
        value={8}
      />
    </View>
    <View
      style={null}
    >
      <item
        sticky={true}
        value={9}
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`VirtualizedList forwards correct stickyHeaderIndices when partially in initial render window 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "key": 0,
        "sticky": true,
      },
      Object {
        "key": 1,
      },
      Object {
        "key": 2,
      },
      Object {
        "key": 3,
        "sticky": true,
      },
      Object {
        "key": 4,
      },
      Object {
        "key": 5,
      },
      Object {
        "key": 6,
        "sticky": true,
      },
      Object {
        "key": 7,
      },
      Object {
        "key": 8,
      },
      Object {
        "key": 9,
        "sticky": true,
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  getItemLayout={[Function]}
  initialNumToRender={5}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={
    Array [
      0,
      3,
    ]
  }
>
  <View>
    <View
      style={null}
    >
      <item
        sticky={true}
        value={0}
      />
    </View>
    <View
      style={null}
    >
      <item
        value={1}
      />
    </View>
    <View
      style={null}
    >
      <item
        value={2}
      />
    </View>
    <View
      style={null}
    >
      <item
        sticky={true}
        value={3}
      />
    </View>
    <View
      style={null}
    >
      <item
        value={4}
      />
    </View>
    <View
      style={
        Object {
          "height": 50,
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`VirtualizedList handles nested lists 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "key": "outer0",
      },
      Object {
        "key": "outer1",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        data={
          Array [
            Object {
              "key": "outer0:inner0",
            },
            Object {
              "key": "outer0:inner1",
            },
          ]
        }
        getItem={[Function]}
        getItemCount={[Function]}
        horizontal={false}
        onContentSizeChange={[Function]}
        onLayout={[Function]}
        onMomentumScrollBegin={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        renderItem={[Function]}
        scrollEventThrottle={50}
        stickyHeaderIndices={Array []}
      >
        <View
          onLayout={[Function]}
          style={null}
        >
          <item
            title="outer0:inner0"
          />
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <item
            title="outer0:inner1"
          />
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <RCTScrollView
        data={
          Array [
            Object {
              "key": "outer1:inner0",
            },
            Object {
              "key": "outer1:inner1",
            },
          ]
        }
        getItem={[Function]}
        getItemCount={[Function]}
        horizontal={true}
        onContentSizeChange={[Function]}
        onLayout={[Function]}
        onMomentumScrollBegin={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        renderItem={[Function]}
        scrollEventThrottle={50}
        stickyHeaderIndices={Array []}
      >
        <View>
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
                null,
              ]
            }
          >
            <item
              title="outer1:inner0"
            />
          </View>
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
                null,
              ]
            }
          >
            <item
              title="outer1:inner1"
            />
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</RCTScrollView>
`;

exports[`VirtualizedList handles separators correctly 1`] = `
<RCTScrollView
  ItemSeparatorComponent={[Function]}
  data={
    Array [
      Object {
        "key": "i0",
      },
      Object {
        "key": "i1",
      },
      Object {
        "key": "i2",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <item
        title="i0"
      />
      <separator
        highlighted={false}
        leadingItem={
          Object {
            "key": "i0",
          }
        }
      />
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <item
        title="i1"
      />
      <separator
        highlighted={false}
        leadingItem={
          Object {
            "key": "i1",
          }
        }
      />
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <item
        title="i2"
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`VirtualizedList handles separators correctly 2`] = `
<RCTScrollView
  ItemSeparatorComponent={[Function]}
  data={
    Array [
      Object {
        "key": "i0",
      },
      Object {
        "key": "i1",
      },
      Object {
        "key": "i2",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <item
        title="i0"
      />
      <separator
        highlighted={true}
        leadingItem={
          Object {
            "key": "i0",
          }
        }
      />
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <item
        title="i1"
      />
      <separator
        highlighted={true}
        leadingItem={
          Object {
            "key": "i1",
          }
        }
      />
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <item
        title="i2"
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`VirtualizedList handles separators correctly 3`] = `
<RCTScrollView
  ItemSeparatorComponent={[Function]}
  data={
    Array [
      Object {
        "key": "i0",
      },
      Object {
        "key": "i1",
      },
      Object {
        "key": "i2",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <item
        title="i0"
      />
      <separator
        highlighted={true}
        leadingItem={
          Object {
            "key": "i0",
          }
        }
      />
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <item
        title="i1"
      />
      <separator
        highlighted={true}
        leadingItem={
          Object {
            "key": "i1",
          }
        }
        press={true}
      />
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <item
        title="i2"
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`VirtualizedList keeps sticky headers realized after scrolled out of viewport 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "key": 0,
        "sticky": true,
      },
      Object {
        "key": 1,
        "sticky": false,
      },
      Object {
        "key": 2,
        "sticky": false,
      },
      Object {
        "key": 3,
        "sticky": true,
      },
      Object {
        "key": 4,
        "sticky": false,
      },
      Object {
        "key": 5,
        "sticky": false,
      },
      Object {
        "key": 6,
        "sticky": true,
      },
      Object {
        "key": 7,
        "sticky": false,
      },
      Object {
        "key": 8,
        "sticky": false,
      },
      Object {
        "key": 9,
        "sticky": true,
      },
      Object {
        "key": 10,
        "sticky": false,
      },
      Object {
        "key": 11,
        "sticky": false,
      },
      Object {
        "key": 12,
        "sticky": true,
      },
      Object {
        "key": 13,
        "sticky": false,
      },
      Object {
        "key": 14,
        "sticky": false,
      },
      Object {
        "key": 15,
        "sticky": true,
      },
      Object {
        "key": 16,
        "sticky": false,
      },
      Object {
        "key": 17,
        "sticky": false,
      },
      Object {
        "key": 18,
        "sticky": true,
      },
      Object {
        "key": 19,
        "sticky": false,
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  getItemLayout={[Function]}
  initialNumToRender={1}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={
    Array [
      0,
      2,
      4,
      7,
      10,
      13,
    ]
  }
  windowSize={1}
>
  <View>
    <View
      style={null}
    >
      <item
        sticky={true}
        value={0}
      />
    </View>
    <View
      style={
        Object {
          "height": 50,
        }
      }
    />
    <View
      style={null}
    >
      <item
        sticky={true}
        value={6}
      />
    </View>
    <View
      style={
        Object {
          "height": 20,
        }
      }
    />
    <View
      style={null}
    >
      <item
        sticky={true}
        value={9}
      />
    </View>
    <View
      style={null}
    >
      <item
        sticky={false}
        value={10}
      />
    </View>
    <View
      style={null}
    >
      <item
        sticky={false}
        value={11}
      />
    </View>
    <View
      style={null}
    >
      <item
        sticky={true}
        value={12}
      />
    </View>
    <View
      style={null}
    >
      <item
        sticky={false}
        value={13}
      />
    </View>
    <View
      style={null}
    >
      <item
        sticky={false}
        value={14}
      />
    </View>
    <View
      style={null}
    >
      <item
        sticky={true}
        value={15}
      />
    </View>
    <View
      style={null}
    >
      <item
        sticky={false}
        value={16}
      />
    </View>
    <View
      style={null}
    >
      <item
        sticky={false}
        value={17}
      />
    </View>
    <View
      style={null}
    >
      <item
        sticky={true}
        value={18}
      />
    </View>
    <View
      style={null}
    >
      <item
        sticky={false}
        value={19}
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`VirtualizedList realizes sticky headers in viewport on batched render 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "key": 0,
        "sticky": true,
      },
      Object {
        "key": 1,
      },
      Object {
        "key": 2,
      },
      Object {
        "key": 3,
        "sticky": true,
      },
      Object {
        "key": 4,
      },
      Object {
        "key": 5,
      },
      Object {
        "key": 6,
        "sticky": true,
      },
      Object {
        "key": 7,
      },
      Object {
        "key": 8,
      },
      Object {
        "key": 9,
        "sticky": true,
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  getItemLayout={[Function]}
  initialNumToRender={1}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={
    Array [
      0,
      3,
    ]
  }
  windowSize={1}
>
  <View>
    <View
      style={null}
    >
      <item
        sticky={true}
        value={0}
      />
    </View>
    <View
      style={null}
    >
      <item
        value={1}
      />
    </View>
    <View
      style={null}
    >
      <item
        value={2}
      />
    </View>
    <View
      style={null}
    >
      <item
        sticky={true}
        value={3}
      />
    </View>
    <View
      style={null}
    >
      <item
        value={4}
      />
    </View>
    <View
      style={
        Object {
          "height": 50,
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`VirtualizedList renders all the bells and whistles 1`] = `
<RCTScrollView
  ItemSeparatorComponent={[Function]}
  ListEmptyComponent={[Function]}
  ListFooterComponent={[Function]}
  ListHeaderComponent={[Function]}
  data={
    Array [
      Object {
        "id": "0",
      },
      Object {
        "id": "1",
      },
      Object {
        "id": "2",
      },
      Object {
        "id": "3",
      },
      Object {
        "id": "4",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  getItemLayout={[Function]}
  invertStickyHeaders={true}
  inverted={true}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onRefresh={[MockFunction]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  refreshControl={
    <RefreshControlMock
      onRefresh={[MockFunction]}
      refreshing={false}
    />
  }
  refreshing={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  style={
    Array [
      Object {
        "transform": Array [
          Object {
            "scaleY": -1,
          },
        ],
      },
      undefined,
    ]
  }
>
  <RCTRefreshControl />
  <View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "transform": Array [
            Object {
              "scaleY": -1,
            },
          ],
        }
      }
    >
      <header />
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "column-reverse",
          },
          Object {
            "transform": Array [
              Object {
                "scaleY": -1,
              },
            ],
          },
        ]
      }
    >
      <item
        value="0"
      />
      <separator />
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "column-reverse",
          },
          Object {
            "transform": Array [
              Object {
                "scaleY": -1,
              },
            ],
          },
        ]
      }
    >
      <item
        value="1"
      />
      <separator />
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "column-reverse",
          },
          Object {
            "transform": Array [
              Object {
                "scaleY": -1,
              },
            ],
          },
        ]
      }
    >
      <item
        value="2"
      />
      <separator />
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "column-reverse",
          },
          Object {
            "transform": Array [
              Object {
                "scaleY": -1,
              },
            ],
          },
        ]
      }
    >
      <item
        value="3"
      />
      <separator />
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "column-reverse",
          },
          Object {
            "transform": Array [
              Object {
                "scaleY": -1,
              },
            ],
          },
        ]
      }
    >
      <item
        value="4"
      />
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "transform": Array [
            Object {
              "scaleY": -1,
            },
          ],
        }
      }
    >
      <footer />
    </View>
  </View>
</RCTScrollView>
`;

exports[`VirtualizedList renders empty list 1`] = `
<RCTScrollView
  data={Array []}
  getItem={[Function]}
  getItemCount={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
>
  <View />
</RCTScrollView>
`;

exports[`VirtualizedList renders empty list with empty component 1`] = `
<RCTScrollView
  ListEmptyComponent={[Function]}
  ListFooterComponent={[Function]}
  ListHeaderComponent={[Function]}
  data={Array []}
  getItem={[Function]}
  getItemCount={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
>
  <View>
    <View
      onLayout={[Function]}
    >
      <header />
    </View>
    <empty />
    <View
      onLayout={[Function]}
    >
      <footer />
    </View>
  </View>
</RCTScrollView>
`;

exports[`VirtualizedList renders list with empty component 1`] = `
<RCTScrollView
  ListEmptyComponent={[Function]}
  data={
    Array [
      Object {
        "key": "hello",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <item
        value="hello"
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`VirtualizedList renders null list 1`] = `
<RCTScrollView
  getItem={[Function]}
  getItemCount={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
>
  <View />
</RCTScrollView>
`;

exports[`VirtualizedList renders simple list 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "key": "i1",
      },
      Object {
        "key": "i2",
      },
      Object {
        "key": "i3",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <item
        value="i1"
      />
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <item
        value="i2"
      />
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <item
        value="i3"
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`VirtualizedList renders simple list using ListItemComponent 1`] = `
<RCTScrollView
  ListItemComponent={[Function]}
  data={
    Array [
      Object {
        "key": "i1",
      },
      Object {
        "key": "i2",
      },
      Object {
        "key": "i3",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <item
        value="i1"
      />
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <item
        value="i2"
      />
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <item
        value="i3"
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`VirtualizedList test getItem functionality where data is not an Array 1`] = `
<RCTScrollView
  data={
    Map {
      "id_0" => Object {
        "key": "item_0",
      },
    }
  }
  getItem={[Function]}
  getItemCount={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <item
        value="item_0"
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`VirtualizedList warns if both renderItem or ListItemComponent are specified. Uses ListItemComponent 1`] = `
<RCTScrollView
  ListItemComponent={[Function]}
  data={
    Array [
      Object {
        "key": "i1",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <item
        testID="i1-ListItemComponent"
        value="i1"
      />
    </View>
  </View>
</RCTScrollView>
`;
